fix overflow bug

--- a/app/me/workouts/[id]/UserWorkout.module.scss
+++ b/app/me/workouts/[id]/UserWorkout.module.scss
@@ -24,7 +24,8 @@
             max-height: 100%;
         
             video {
-                height: 100%;
+                min-height: 100%;
+                min-width: 100%;
                 object-fit: cover;
                 aspect-ratio: 2 / 1;
             }
