--- a/app/workouts/[id]/Workout.module.scss
+++ b/app/workouts/[id]/Workout.module.scss
@@ -25,7 +25,8 @@
 
            
             video {
-                height: 100%;
+                min-height: 100%;
+                min-width: 100%;
                 object-fit: cover;
                 aspect-ratio: 2 / 1;
             }
